WR#312961: Fix for mod_hsuforum text overflow in recent activity block
(cherry picked from commit ad08e1c11d1bbd95c748fcbd0753cb79a860c9d3)

--- a/styles.css
+++ b/styles.css
@@ -708,7 +708,7 @@ FUN WITH FORMS
 .block_recent_activity .snap-media-object {
     margin-bottom: 0.3em;
     font-size: small;
-    width: 310px;
+    width: 100%;
 }
 
 .modtype_hsuforum .snap-media-object > a,
